<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateData">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/judul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/update_data_handphone"
            android:textSize="40sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imguview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:cropToPadding="false"
            android:scaleType="fitXY"
            android:layout_gravity="center"
            android:contentDescription="@string/gambar_hp" />

        <Button
            android:id="@+id/bupicturefromgallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ambil_photo_dari_gallery" />

        <Button
            android:id="@+id/bupicturefromphoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ambil_photo_langsung"/>

        <EditText
            android:id="@+id/edumerk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/merk"
            android:textSize="20sp"
            android:inputType="text"
            android:autofillHints="@string/merk"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/edutype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type"
            android:textSize="20sp"
            android:inputType="text"
            android:autofillHints="@string/type"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/eduram"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ram"
            android:textSize="20sp"
            android:inputType="text"
            android:autofillHints="@string/ram"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/eduinternal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/internal"
            android:textSize="20sp"
            android:inputType="text"
            android:autofillHints="@string/internal"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/edukelengkapan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/kelengkapan"
            android:textSize="20sp"
            android:inputType="text"
            android:autofillHints="@string/kelengkapan"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/edujaringan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/jaringan"
            android:textSize="20sp"
            android:inputType="text"
            android:autofillHints="@string/jaringan"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/edudeskripsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/deskripsi"
            android:textSize="20sp"
            android:inputType="text"
            android:autofillHints="@string/deskripsi"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/eduhargajual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/harga_jual"
            android:textSize="20sp"
            android:inputType="text"
            android:autofillHints="@string/harga_jual"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/eduhargajualmaks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/harga_jual_maksimal"
            android:textSize="20sp"
            android:inputType="text"
            android:autofillHints="@string/harga_jual_maksimal"
            tools:targetApi="o" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_data"
                android:onClick="updateData"/>

            <!--<Button-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/clear"-->
                <!--android:onClick="updateData"/>-->

        </LinearLayout>

    </LinearLayout>

</ScrollView>